objects/vlocity_ins__ProducerAppointment__c.object
<CustomObject>
    <description>Represents the agreement between an insurance carrier and an agent/broker/producer authorizing it to act on its behalf as an agent in the licensed state/jurisdiction. Master-detail child object of Agent/Broker/Producer Contact.</description>
    <fields>
        <fullName>vlocity_ins__AuthorizedToBind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AuthorizedToIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AuthorizedToQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CarrierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Carrier</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Appointments</relationshipLabel>
        <relationshipName>Appointments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resident Insurance Producer</fullName>
                </value>
                <value>
                    <fullName>Non-Resident Insurance Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LinesofAuthority__c</fullName>
        <label>Lines of Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Accident &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Life Only</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalIssueDate__c</fullName>
        <label>Original Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <label>Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments5</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Producer Appointment</label>
    <nameField>
        <label>Appointment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Producer Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>